syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.simplexportal.spatial.index.grid.entrypoints.grpc";
option optimize_for = SPEED;

package com.simplexportal.spatial.index.grid.entrypoints.grpc;

service GRPCEntryPoint {
    rpc AddBatch (AddBatchCmds) returns (AddBatchCmds.ACK);
    rpc AddStreamBatches (stream AddBatchCmds) returns (stream AddBatchCmds.ACK);
    rpc GetMetrics (GetMetricsCmd) returns (GetMetricsCmd.Metrics);
    rpc SearchNearestNode (SearchNearestNodeCmd) returns (SearchNearestNodeCmd.NearestNodeReply);
}

// Generic model

message Node {
    uint64 id = 1;
    double lat = 2;
    double lon = 3;
    map<string, string> attributes = 4;
}

message Way {
    uint64 id = 1;
    repeated Node nodes = 2;
    map<string, string> attributes = 3;
}

// Commands and responses.

/* Command to add nodes or ways. */
message AddBatchCmds {
    message AddCmd {
        oneof Command {
            Node node = 1;
            Way way = 2;
        }
    }

    repeated AddCmd commands = 1;

    // Response
    message ACK {
        oneof Value {
            bool done = 1;
            string message = 2;
        }
    }
}


/* Get index metrics. */
message GetMetricsCmd {
    // Response
    message Metrics {
        uint64 ways = 1;
        uint64 nodes = 2;
    }
}


/* Search nearest nodes. */
message SearchNearestNodeCmd {
    double lon = 1;
    double lat = 2;

    // Response
    message NearestNodeReply {
        bool done = 1;
        string message = 2;
        repeated Node nodes = 3;
    }
}







